# georunes

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
examples/: References.txt  WAC_granitoids_comp.xls  binary_diagrams.py  preprocess_files.py  spider_diagrams.py
examples/apfu/: apfu_test.py  feldspars.csv  micas.csv
examples/diagrams/: PiperHeLi2020.csv  WAC_granitoids.csv  WAC_granitoids_comp.xls  binary_diagrams.py  preprocess_files.py  spider_diagrams.py  ternary_diagrams.py  three_dim_plot.py
examples/modal mineralogy/: cipw_test.csv  cipw_test.py  gradient_descent_test.py  ls_tests.py  minerals.csv  modalmin_test.csv  random_search_test.py
examples/modeling/: batch_melting_spectra.py  mass_balance.py  mass_balance_dat.xlsx  model_db.xlsx  rayleigh_cryst_ratio.py
georunes/: __init__.py
georunes/base/: helpers.py  spider.py  ternary.py
georunes/binary/: debonlefortba.py  debonlefortpq.py  delaroche.py  frost.py  pearce.py  peccetaylor.py  ratiosversus.py  shand.py  sialkali.py  versus.py
georunes/data/: References.txt  Reservoirs.csv
georunes/modmin/norm/: cipw.py
georunes/modmin/optim/: base.py  bvls.py  gd.py  nnls.py  randsearch.py
georunes/modmin/struct/: apfu.py
georunes/plot/: base.py  legend.py  spider.py
georunes/ternary/: afm.py  anabor.py  jensen.py  nesbitt_young.py  qap.py
georunes/tools/: chemistry.py  colors.py  data.py  filemanager.py  formatters.py  language.py  plotting.py  preprocessing.py  reservoirs.py  warnings.py
tests/: WAC_granitoids_comp.xls
tests/plot/: test_binary_diagrams.py
(+35 files in other folders)
