[metadata]
name = georunes
version = attr: georunes.__version__
url = https://github.com/dugucrypter/georunes
author = Wiledio Marc-Emile Bonzi
author_email = wiledio.bonzi@gmail.com
description = Tools for geochemical visualization and modeling
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geochemistry, diagrams, oxides, chemical elements, modeling, fitting,
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
project_urls =
    Source = https://github.com/dugucrypter/georunes
license = MIT
license_files = LICENSE